# testpackage

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb
src/testpackage/: __init__.py
tests/: test_testpackage.py
