[tool.poetry]
name = "testpackage"
version = "0.1.0"
description = "this is just to learn how it works"
authors = ["Siamak Attarian"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
